--- a/TinySftpServer/TinySftpServer.csproj
+++ b/TinySftpServer/TinySftpServer.csproj
@@ -12,7 +12,7 @@
     <Company>Rebex CR, s.r.o.</Company>
     <Description>Simple stand-alone SFTP server for testing purposes</Description>
     <Copyright>Copyright (c) 2015-2020 Rebex CR, s.r.o.</Copyright>
-    <PackageProjectUrl>https://labs.rebex.net/tiny-sftp-server</PackageProjectUrl>
+    <PackageProjectUrl>https://www.rebex.net/tiny-sftp-server</PackageProjectUrl>
   </PropertyGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources\RebexLogo.png" />
