Updated Rebex libraries; increased version number to 1.0.13

--- a/TinySftpServer/TinySftpServer.csproj
+++ b/TinySftpServer/TinySftpServer.csproj
@@ -7,21 +7,21 @@
     <RootNamespace>Rebex.TinySftpServer</RootNamespace>
     <ApplicationIcon>Resources\TinySftpServer.ico</ApplicationIcon>
     <PlatformTarget>AnyCPU</PlatformTarget>
-    <Version>1.0.12</Version>
+    <Version>1.0.13</Version>
     <Product>Rebex Tiny SFTP Server</Product>
     <Company>Rebex CR, s.r.o.</Company>
     <Description>Simple stand-alone SFTP server for testing purposes</Description>
-    <Copyright>Copyright (c) 2015-2020 Rebex CR, s.r.o.</Copyright>
-    <PackageProjectUrl>https://www.rebex.net/tiny-sftp-server</PackageProjectUrl>
+    <Copyright>Copyright (c) 2015-2022 Rebex CR, s.r.o.</Copyright>
+    <PackageProjectUrl>https://www.rebex.net/tiny-sftp-server/</PackageProjectUrl>
   </PropertyGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources\RebexLogo.png" />
     <EmbeddedResource Include="Resources\TinySftpServer.ico" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Rebex.FileServer" Version="5.0.7733" />
-    <PackageReference Include="Rebex.Networking" Version="5.0.7733" />
-    <PackageReference Include="Rebex.Common" Version="5.0.7733" />
+    <PackageReference Include="Rebex.FileServer" Version="6.0.8000" />
+    <PackageReference Include="Rebex.Networking" Version="6.0.8000" />
+    <PackageReference Include="Rebex.Common" Version="6.0.8000" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System.Configuration" />
