Made encryption cipher list configurable; disabled CBC and Twofish ciphers by default

--- a/TinySftpServer/App.config
+++ b/TinySftpServer/App.config
@@ -23,6 +23,21 @@
     <add key="dssPrivateKeyFile" value="server-private-key-dss.ppk" />
     <add key="dssPrivateKeyPassword" value="my-super-secure-password" />
 
+    <!-- Comma-separated list of enabled encryption ciphers.
+         The following ciphers are supported:
+            aes256-gcm@openssh.com,aes128-gcm@openssh.com,
+            chacha20-poly1305@openssh.com,
+            aes256-ctr,aes192-ctr,aes128-ctr,aes256-cbc,aes192-cbc,aes128-cbc,
+            3des-ctr,3des-cbc,
+            twofish256-ctr,twofish192-ctr,twofish128-ctr,twofish256-cbc,twofish192-cbc,twofish128-cbc,twofish-cbc
+         If the value is empty, the following ciphers are enabled by default:
+            aes256-gcm@openssh.com,aes128-gcm@openssh.com,
+            chacha20-poly1305@openssh.com,
+            aes256-ctr,aes192-ctr,aes128-ctr,
+            3des-ctr
+    -->
+    <add key="ciphers" value="" />
+
     <!-- specifies whether to start the server when the application is launched -->
     <add key="autoStart" value="false" />
 
